--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,28 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<div class="app-card-container">
+  <div class="card">
+    <h1>Would you like to work together?</h1>
+
+    <hr>
+
+    <div class="row">
+      <div class="col-md-6">
+        <h3>Dev Bootcamp</h3>
+
+        <p>2912 Executive Pkwy #220, Lehi, UT 84043</p>
+
+        <h3>Phone</h3>
+
+        <p><%= number_to_phone "1-801-980-3664" %></p>
+
+        <h3>Email</h3>
+
+        <p>victorlaucas@gmail.com <br>
+          <a href="mailto:victorlaucas@gmail.com?subject=PortfolioContact" "email me">Email me</a> </p>
+      </div>
+
+      <div class="col-md-6">
+       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3037.142199466846!2d-111.8982080488235!3d40.427850062785446!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x874d8554c917de07%3A0x865ac5eda44125a!2sBottega!5e0!3m2!1sen!2sus!4v1505506929059" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
+</div>
