--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="inner cover">
+  <h1 class="cover-heading">Welcome.</h1>
+  <p class="lead">Software development should not be a secret process, when I take on a new project I make it my goal to not only deliver a well crafted product but to also ensure that each stage of the process is fully communicated.</p>
+  <p class="lead">
+    <%= link_to "About", about_path, class: "btn btn-lg btn-secondary" %>
+  </p>
+</div>
